<?xml version="1.0"?>
<package format="2">
  <name>mavros_gym</name>
  <version>0.0.0</version>
  <description>The mavros_gym package</description>
  <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
  <license>BSD</license>
  <author email="saifullah3396@gmail.com">Saifullah</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
